<resources>
    <string name="app_name">NMedia</string>
    <string name="main_activity_text">NMedia!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_likes_icon">Likes</string>
    <string name="description_watches_icon">Watches</string>
    <string name="description_share_icon">Shares</string>
    <string name="remove_post_action">Remove</string>
    <string name="post_content">Post content</string>
    <string name="edit_post_action">Edit content</string>
    <string name="chooser_share_post">Share post</string>
    <string name="ok_button">ok button</string>
    <string name="add_button">Add button</string>
    <string name="enter_video_url">enter video url</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_new_post">%1$s added new post:</string>
</resources>